# boxxy_robot

./: CMakeLists.txt  README  package.xml
config/: laser_self_filter.yaml
launch/: boxxy.launch  boxxy_gazebo_avz_world.launch  boxxy_gazebo_empty_world.launch  gazebo.launch  xacrodisplay.launch
urdf/: robot_description.urdf.xacro
